tests/NormalTests/paczka1/small_fuzzy/24728305.err
Error in line 13: KcgaF1SE A743 11,5
Error in line 15: 8dsP A84 1,9
